[package]
name = "line-bot-messaging-api"
version = "0.1.10"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

authors = ["uiuifree"]
description = "LineMessagingApi for Rust"
license = "MIT"
keywords = ["Line", "LineMessagingApi"]
readme="README.md"
repository = "https://github.com/uiuifree/rust-line-messaging-api"
[dependencies]

serde = { version = "~1" }
serde_json = "~1"
serde_derive = "~1"
#multipart = { version = "0.18", features = ["default"] }
reqwest = { version = "0.12", features = ["multipart", "blocking", "json", "stream"] }

[dev-dependencies]
tokio = { version = "~1", features = ["full"] }
